--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -47,6 +47,13 @@ h2 {
     line-height: 140%;
   }
 
+  &.nav-h2 {
+    @include mobile {
+      font-size: 32px;
+      line-height: 140%;
+    }
+  }
+
   &.grey {
     color: rgba(51, 51, 51, 0.5);
   }
