--- a/src/pages/ourwork/ourwork.scss
+++ b/src/pages/ourwork/ourwork.scss
@@ -2,17 +2,21 @@
   display: grid;
   height: 100%;
   width: 100%;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(3, minmax(200px, 320px));
   gap: 100px;
 
   @media only screen and (max-width: 991px) {
     gap: 80px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
 
   @media only screen and (max-width: 767px) {
     gap: 50px;
-    grid-template-columns: auto;
     padding: 0% 8.33%;
+  }
+
+  @media only screen and (max-width: 290px) {
+    grid-template-columns: auto;
   }
 }
 
